did some final touches fixed navbar stuck in middle issue and merged updated main

--- a/styles.css
+++ b/styles.css
@@ -61,14 +61,17 @@ header {
     display: flex;
     flex-direction: row;
     color: #00e0d0;
+    justify-content: flex-start;
+
 }
 .navbar {
-    grid-area: 1 / 3 / 1 / 5;
+    grid-area: 1 / 3 / 1 / 6;
     padding-left: 3em;
 }
 .navbar-links {
     list-style: none;
     display: flex;
+    justify-content: flex-end;
     
 }
 .navbar-links > li {
